# Orca_script_manager

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  empty_config2.json  environment.yml  profiling_run.prof  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  index.rst  modules.rst  script_maker2000.rst  script_maker2000_cli.rst  script_maker2000_crest.rst  script_maker2000_files.rst
docs/source/command_line_interface/: cli_documentation.rst  return_batch_config.rst  start_config.rst  start_zip.rst
docs/source/developer_documentation/: developer_contribution.rst
first_test/: example_molecules.csv  first_test.json
prof/: test_parallel_steps.prof
script_maker2000/: __init__.py  analysis.py  batch_manager.py  cli.py  config_maker.py  crest.py  files.py  job.py  molecule_preperation.py  orca.py  remote_connection.py  slurm.py  template.py  test.py  work_manager.py
script_maker2000/dash_ui/: config_maker_calls.py  config_maker_ui.py  dash_main_gui.py  outdated_config_maker.py  remote_explorer.py  remote_explorer_calls.py  results_window.py  results_window_calls.py  sacct_options.json  slurm_watch_calls.py  slurm_watch_ui.py
script_maker2000/data/: empty_config.json  example_config.json  example_config_xyz _multilayer.json  example_config_xyz.json  example_config_xyz_multilayer.json  example_molecules.csv  orca_template.sbatch  template_orca_sbatch.sbatch
script_maker2000/data/example_sdw_files/: molecule_0.sdw  molecule_1.sdw  molecule_10.sdw  molecule_11.sdw  molecule_12.sdw  molecule_13.sdw  molecule_14.sdw  molecule_15.sdw  molecule_16.sdw  molecule_17.sdw  molecule_18.sdw  molecule_19.sdw  molecule_2.sdw  molecule_20.sdw  molecule_21.sdw  molecule_22.sdw  molecule_23.sdw  molecule_24.sdw  molecule_25.sdw  molecule_26.sdw  molecule_27.sdw  molecule_28.sdw  molecule_29.sdw  molecule_3.sdw  molecule_30.sdw  molecule_4.sdw  molecule_5.sdw  molecule_6.sdw  molecule_7.sdw  molecule_8.sdw  molecule_9.sdw
script_maker2000/data/example_xyz/: START_a001_b001_c1m0.xyz  START_a001_b004_2__c0m1.xyz  START_a007_b022_2_c1m0.xyz  START_a007_b026.xyz  START_a007_b027_2.xyz  START_a007_b069.xyz  example_molecules.csv  example_molecules.json
script_maker2000/notebooks/: PBEh_3c_opt__PBEh3c_freq_12cores_sp___C9H10N2Pb.out  analysis.ipynb  cc_freq_attr.json  prepare_benchmark_config.ipynb  prepare_test_dataset_efficency_benchmark.ipynb  test.out
script_maker2000/tests/: conftest.py  test_analysis.py  test_batch_manager.py  test_cli.py  test_config_maker_calls.py  test_crest.py  test_dash_ui.py  test_files.py  test_job.py  test_molecule_preperation.py  test_orca.py  test_work_manager.py
script_maker2000/tests/test_data/analysis_job_backup/: job_backup.json
script_maker2000/tests/test_data/analysis_test_data/: FREQ_Sb_5_M016973.out  FREQ_Sb_5_M016973_calc_result.json  PBEh_3c_opt___C3H9GeNOS.out  (+4 more)
source/: script_maker2000_slurm.rst
source/GUI/: gui_overview.rst
source/command_line_interface/: collect_input.rst  collect_results.rst
source/developer_documentation/: main_developer_page.rst
source/install_guide/: install_guide.rst
(+135 files in other folders)
