[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "script_maker2000"
version = "0.0.1"
description = "Support Tool for startin chemical calculations on slurm systems."
readme = "README.md"
maintainers = [
    { name = "Gwydion Daskalakis", email = "daskalakis@stud.uni-heidelberg.de" },
    { name = "Manuel Schmitt", email = "Manuel.Schmitt@aci.uni-heidelberg.dee" },
]
requires-python = ">=3.11"
license = { text = "GNU" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU License",
]

dependencies = [
    "pandas",
    "numpy",
    "click",
  
  
]



[project.scripts]

[tool.setuptools]
packages = ["script_maker2000", "script_maker2000.data"]